deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: erawan
  labels:
    app.kubernetes.io/name: erawan-cluster
